--- a/EthereumAddressGenerator.ipynb
+++ b/EthereumAddressGenerator.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Ethereum Address Generator\n",
-    "## Walkthrough & Checksum"
+    "## Walk-through & Checksum"
    ]
   },
   {
