--- a/EthereumAddressGenerator.ipynb
+++ b/EthereumAddressGenerator.ipynb
@@ -17,9 +17,8 @@
     "import codecs\n",
     "import ecdsa\n",
     "\n",
-    "from Cryptodome.Hash import keccak\n",
-    "\n",
-    "from Cryptodome.Hash import SHA256\n"
+    "from Cryptodome.Hash import keccak, SHA256\n",
+    "\n"
    ]
   },
   {
