--- a/EthereumAddressGenerator.ipynb
+++ b/EthereumAddressGenerator.ipynb
@@ -17,8 +17,7 @@
     "import codecs\n",
     "import ecdsa\n",
     "\n",
-    "from Cryptodome.Hash import keccak, SHA256\n",
-    "\n"
+    "from Cryptodome.Hash import keccak, SHA256\n"
    ]
   },
   {
